[project]
name = "11-taco-crawl-optimization"
version = "0.1.0"
description = ""
authors = [
    {name = "Geneviève Le Houx",email = "gnvvlhx@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "dataclasses-json (>=0.6.7,<0.7.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
